fixtures/invalid/nested-list.mu
@list kind="unordered"
- Parent
    - Skipped level
